refactor(api): GetAllTagsHandler response changed - Modified response to remove pagination and return all tags - Reinitialized swagger docs
